@@ -29,9 +29,12 @@ Mojo::Reactor::POE - POE backend for Mojo::Reactor
   $reactor->start unless $reactor->is_running;
 
   # Or in an application using Mojo::IOLoop
-  BEGIN { $ENV{MOJO_REACTOR} = 'Mojo::Reactor::POE' }
   use POE qw(Loop::IO_Poll);
+  use Mojo::Reactor::POE;
   use Mojo::IOLoop;
+  
+  # Or in a Mojolicious application
+  $ MOJO_REACTOR=Mojo::Reactor::POE POE_EVENT_LOOP=POE::Loop::IO_Poll hypnotoad script/myapp
 
 =head1 DESCRIPTION
 
@@ -39,7 +42,8 @@ L<Mojo::Reactor::POE> is an event reactor for L<Mojo::IOLoop> that uses L<POE>.
 The usage is exactly the same as other L<Mojo::Reactor> implementations such as
 L<Mojo::Reactor::Poll>. To set it as the default backend for L<Mojo::IOLoop>,
 set the C<MOJO_REACTOR> environment variable to C<Mojo::Reactor::POE>. This
-must be set before L<Mojo::IOLoop> is loaded.
+must be set before L<Mojo::IOLoop> is loaded, or before invoking L<morbo> or
+L<hypnotoad>.
 
 Note that if you load multiple potential event loops for L<POE> it will fail.
 This includes L<IO::Poll> and L<Mojo::IOLoop> (loaded by L<Mojolicious>) if the
