@@ -32,6 +32,7 @@ exclude_filename = LICENSE
 -remove = GatherDir
 
 [MetaJSON]
+[CPANFile]
 
 [Prereqs]
 Mojolicious   = 5.70
