@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Remove deprecated is_readable method from tests
+  - Set default Mojo::Reactor
+  - Add hypnotoad example to synopsis
 
 0.005     2015-02-02 19:52:24-05:00 America/New_York
   - Load POE before Mojo::Reactor to avoid event loop issues
